# neofetchrs

./: Cargo.toml  Makefile  README.md  build-release.sh
src/: ascii_art.rs  cli.rs  config.rs  lib.rs  main.rs  output.rs  system_info.rs  utils.rs
